[package]
name = "jrf"
version = "0.0.2"
authors = ["Peter Heesterman <heesterman.peter@gmail.com>"]
edition = "2018"

description = "An underpowered JSON formatting cli"
repository = "https://github.com/peterheesterman/jrf"
readme = "./README.md"
keywords = ["json", "format", "simple", "fast", "formatter"]
categories = ["encoding", "parsing"]
license = "MIT"

[dependencies]
jsonist = '0.0.3'
